Changes tweets to inline to stop it wrapping the avatar

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1423,6 +1423,7 @@ hr.line.align-right {
 
 .widget.twitter .twitter-content p {
   color: @font-swatch4-color;
+  display: inline;
 }
 
 .widget.twitter a:hover {
